feat: deploy to now #1

--- a/package.json
+++ b/package.json
@@ -1,24 +1,11 @@
 {
   "name": "car-system",
   "version": "1.0.0",
+  "license": "MIT",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "build": "electron-packager . CarSystem --win --out ../CarSystem --arch=x64 --app-version=0.0.1 --electron-version=2.0.0"
+    "build": "mv app public"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
-  "devDependencies": {
-    "electron": "^2.0.0",
-    "electron-packager": "^12.1.1"
-  }
+  "author": "GitHub"
 }
